# custodian

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  analyze_python_rope.py  check_safetensors.py  debug_attn_safetensors.py  debug_attn_weights.py  debug_corrected_mlp.py  debug_detailed_mlp.py  debug_hooks_mlp.py  debug_mlp_values.py  debug_rope.py  debug_weights.py  index.html  package-lock.json  package.json  tailwind.config.js  test_llama.py  test_output.txt  test_rotary_comparison.py  test_rotary_rust.rs  test_tokenizer.py
.github/instructions/: assist.instructions.md
assets/: input.css  output.css
icons/: favicon.icns
src/: main.rs  utils.rs
src/ai/: loaders.rs  mod.rs  prompts.rs  text_gen.rs  text_gen_b.rs  text_gen_c.rs
src/ai/models/: custom_rope.rs  mod.rs  parts.rs
src/ai/models/llama/: burn_llama.rs  cpp_llama.rs  loaders.rs  mod.rs
src/ai/models/transformer/: cache.rs  mod.rs
src/ai/operators/: apply.rs  mod.rs  outer.rs  rsqrt.rs  sampling.rs
src/db/: mod.rs  models.rs
src/pages/: auth.rs  home.rs  login.rs  mod.rs  organizer.rs
src/pages/organizer/: message_card.rs  mod.rs
src/utils/: mod.rs  organizer.rs  progress.rs
