[package]
name = "custodian"
version = "0.1.0"
edition = "2024"

[features]
wgpu = []

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-desktop = "0.6"
imap = "2.4.1"
itertools = "0.14.0"
native-tls = "0.2.14"
rand = { version = "0.9.2"}
rfc2047-decoder = "1.0.6"

# Load and run models using Candle
candle-core = { version = "0.9.1", package = "candle-core" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
hf-hub = "0.4.3"
tokenizers = "0.21.2"

# Error handling
anyhow = "1.0"
tracing-subscriber = "0.3.19"
serde_json = "1.0.141"
burn = { version = "0.18", features = ["wgpu", "autodiff"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
num-traits = "0.2.19"
safetensors = "0.6.0"
serde = "1.0.219"
memmap2 = "0.9.7"
burn-import = "0.18.0"
burn-ndarray = "0.18.0"
burn-wgpu = "0.18.0"
wgpu = "0.19"
pollster = "0.4.0"
md5 = "0.7"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
